@@ -1,7 +1,15 @@
+2002-08-16  Stefan Kebekus <kebekus@users.sourceforge.net>
+
+	* src/pdb.cpp re-wrote routine to read CONECT records. That
+	(hopefully) fixes a number of bugs in the earlier version
+	(inability to read 5-digit serial numbers, accidently reading salt
+	bridges as connects, etc.)
+
 2002-08-15  Geoff Hutchison <hutchisn@chem.northwestern.edu>
 
 	* src/pdb.cc: Fix ParseConectRecord to make sure we don't read
 	beyond the vs.size().
+
 
 2002-08-14  Stefan Kebekus <kebekus@users.sourceforge.net>
 
